--- a/src/DemoWhatsAppNETAPIVBNET/DemoWhatsAppNETAPIVBNET.vbproj
+++ b/src/DemoWhatsAppNETAPIVBNET/DemoWhatsAppNETAPIVBNET.vbproj
@@ -61,7 +61,7 @@
     <Reference Include="WebDriver">
       <HintPath>..\..\libs\WebDriver.dll</HintPath>
     </Reference>
-    <Reference Include="WhatsAppNETAPI, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="WhatsAppNETAPI">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\libs\WhatsAppNETAPI.dll</HintPath>
     </Reference>
